syntax = "proto3";
package tws.proto.task;

option java_package = "edu.iu.dsc.tws.proto.checkpoint";
option java_outer_classname = "Checkpoint";

//TaskDiscovery message is sent from the source and sink task to checkpoint manager
//when worker initiates.
message TaskDiscovery {
    int32 taskID = 1;
    TaskType taskType = 2;
    int32 parrallelism = 3;

    enum TaskType {
        SOURCE = 0;
        SINK = 1;
    }
}

message FamilyInitialize {
    string family = 1;
    repeated int32 members = 2;
    int32 containers = 3;
    int32 containerIndex = 4;
}

message FamilyInitializeResponse {
    string family = 1;
    int64 version = 2;

    enum Status {
        OK = 0;
        REJECTED = 1;
    }

    Status status = 3;
}

message ComponentDiscovery {
    string family = 1;
    int32 index = 2;
}

message ComponentDiscoveryResponse {
    string family = 1;
    int32 index = 2;
    int64 version = 3;
}

message VersionUpdateRequest {
    string family = 1;
    int32 index = 2;
    int64 version = 3;
}

message VersionUpdateResponse {
    string family = 1;
    int32 index = 2;
}

message BarrierSync {
    int32 currentBarrierID = 1;
    int32 taskID = 2;
}

message BarrierSend {
    bool sendBarrier = 1;
    int32 currentBarrierID = 2;
}

message CheckpointComplete {
    bool checkpointComplete = 1;
    int32 currentBarrierID = 2;
    int32 sinkID = 3;
}

message CheckpointBarrier {
    int32 currentBarrierID = 1;
}